# Pytorch-ResNet-CPP-Inference

./: CMakeLists.txt  Dockerfile  README.md
src/: inference.cpp  inference.h  main.cpp  model.py
